--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "pyyaml",
     "matplotlib"
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.8,<3.12"
 classifiers = [
     "Private :: Do Not Upload"
 ]
